--- a/Rektor_2017/CAD/CAD.tex
+++ b/Rektor_2017/CAD/CAD.tex
@@ -212,7 +212,7 @@ Predstavljenu postojeću letjelicu \textit{ARDUCOPTER} potrebno je modificirati 
 Budući da se novi koncept upravljanja letjelice zasniva na promjeni centra mase, koje je realizirano pomičnim masama na krakovima, potrebno je izraditi mehanizam kretanja pokretne mase po kraku letjelice. Kretanje pomične mase je linijsko, a mehanizam kretanja mora biti realiziran s minimalnim trenjem. Kretanje pokretne mase ostvareno je električnim aktuatorom.
 
 \subsubsection{Aktuator}
-Zadaća je aktuatora pokretne mase gibanje mase po kraku letjelice, čime se ostvaruje promjena centra mase letjelice. Kako bi ukupna masa letjelice bila manja, sam aktuator na svakom kraku se koristi kao pokretna masa. Za aktuator je odabran koračni motor \textit{NEMA 14}, prikazan slikom \ref{fig:stepper_motor}. Specifikacije koračnog motora su prikazane tablicom \ref{tab:specifikacija_steppera}.
+Zadaća je aktuatora pokretne mase gibanje mase po kraku letjelice, čime se ostvaruje promjena centra mase letjelice. Kako bi ukupna masa letjelice bila manja, sam aktuator na svakom kraku se koristi kao pokretna masa. Za aktuator je odabran koračni motor \textit{NEMA 14}, prikazan Slikom \ref{fig:stepper_motor}. Specifikacije koračnog motora su prikazane Tablicom \ref{tab:specifikacija_steppera}.
 
 \begin{figure}[H]
 	\centering
@@ -248,7 +248,7 @@ Koračni motor odabran je zato jer pruža mogućnost korištenja upravljanja poz
 
 \subsubsection{Kretanje po kraku letjelice}
 
-Kretanje mase po kraku je linijsko. Kako bi kretanje mase imalo minimalno trenje, odabran je klizni mehanizam prikazan slikom \ref{fig:klizni_mehanizam}. Klizni mehanizam montiran je s doljnje strane kraka, a za aluminijsku kvadratnu cijev pričvršćen je s dva vijka. Klizni mehanizam se sastoji od vodilice i kolica. Na kolicima se nalazi klizni mehanizam koji se sastoji od sitnih kuglica koje omogućavaju klizno gibanje s malim trenjem. Na kolica kliznog mehanizma montirano je posebno konstruiran prihvat koračnog motora(slika \ref{fig:stepper_bracket}), kojim se koračni motor učvršćuje na klizni mehanizam.
+Kretanje mase po kraku je linijsko. Kako bi kretanje mase imalo minimalno trenje, odabran je klizni mehanizam prikazan Slikom \ref{fig:klizni_mehanizam}. Klizni mehanizam montiran je s doljnje strane kraka, a za aluminijsku kvadratnu cijev pričvršćen je s dva vijka. Klizni mehanizam se sastoji od vodilice i kolica. Na kolicima se nalazi klizni mehanizam koji se sastoji od sitnih kuglica koje omogućavaju klizno gibanje s malim trenjem. Na kolica kliznog mehanizma montirano je posebno konstruiran prihvat koračnog motora(slika \ref{fig:stepper_bracket}), kojim se koračni motor učvršćuje na klizni mehanizam.
 
 
 \begin{figure}[H]
@@ -330,7 +330,7 @@ Modularni dizajn letjelice \textit{ArduCopter} omogućava jednostavno proširenj
 
 \subsubsection{Sloj kontrolera leta}
 
-Kontroler leta \textit{Pixhawk} se koristi za cjelokupno upravljanje letjelicom. U samom kontroleru su ugrađeni svi potrebni senzori za let, poput žiroskopa, akcelerometra i dr. Kontroler leta potrebno je postaviti što bliže osima rotacije letjelice. U ovom slučaju kontroler je postavljen neposredno iznad ravnine krakova. Položaj kontrolera leta prikazan je slikom \ref{fig:slot_pixhawk}.
+Kontroler leta \textit{Pixhawk} se koristi za cjelokupno upravljanje letjelicom. U samom kontroleru su ugrađeni svi potrebni senzori za let, poput žiroskopa, akcelerometra i dr. Kontroler leta potrebno je postaviti što bliže osima rotacije letjelice. U ovom slučaju kontroler je postavljen neposredno iznad ravnine krakova. Položaj kontrolera leta prikazan je Slikom \ref{fig:slot_pixhawk}.
 
 \begin{figure}[H]
 	\centering
