Added two more sources in literature

--- a/Rektor_2017/Literatura/Literatura.tex
+++ b/Rektor_2017/Literatura/Literatura.tex
@@ -165,6 +165,12 @@
 \bibliographystyle{plain}
 \begin{thebibliography}{9}
  
+\bibitem{lin_alg}
+  A. Aglić Aljinović, N. Elezović, D. Žubrinić,
+  \emph{Linearna algebra},
+  Element,
+  Zagreb 2014.
+ 
 \bibitem{cpp}
  J. Šribar, B. Motik,
  \emph{Demistificirani C++},
@@ -198,7 +204,14 @@
   N. Perić, Z. Vukić, M. Baotić, M. Vašak, N. Mišković
   \emph{Automatsko upravljanje - Predavanje 10 - Nule, polovi i vremenski odzivi},
   Automatsko upravljanje, Fakultet elektrotehnike i računarstva,
-  Zagreb 2016.  
+  Zagreb 2016. 
+  
+\bibitem{kompleksna}
+  N. Elezović,
+  \emph{Funkcije kompleksne varijable - Kompleksna analiza},
+  Element,
+  Zagreb 2010.
+   
   
 \bibitem{urs}
   S. Bogdan,
