Fixed table width and indentation in Exp

--- a/Rektor_2017/Exp/Exp.tex
+++ b/Rektor_2017/Exp/Exp.tex
@@ -180,7 +180,7 @@ Opisanim postupkom podešavanja parametara odabrani su parametri regulatora prik
 	\centering
 	\caption{Parametri regulatora}
 	\label{tab:reg_param}
-	\begin{tabular}{|C{1cm}|C{1cm}|C{1cm}||C{1cm}|C{1cm}|C{1cm}|}
+	\begin{tabular}{|C{1.5cm}|C{1.5cm}|C{1.5cm}||C{1.5cm}|C{1.5cm}|C{1.5cm}|}
 		\hline
 		\multicolumn{3}{|c||}{Vanjska petlja} & \multicolumn{3}{c|}{Unutarnja petlja} \\ \hline
 		P    \hfill       & I    \hfill    & D    \hfill       & P     \hfill     & I       \hfill     & D        \\ \hline
@@ -188,7 +188,7 @@ Opisanim postupkom podešavanja parametara odabrani su parametri regulatora prik
 	\end{tabular}
 \end{table}
 
-Nakon odabira parametara regulatora provedena su tri eksperimenta prikazana u nastavku.
+\noindent Nakon odabira parametara regulatora provedena su tri eksperimenta prikazana u nastavku.
 
 \subsection{Eksperiment odskočne pobude}
 
