Applied recommended changes by M.O. in Exp.

--- a/Rektor_2017/Exp/Exp.tex
+++ b/Rektor_2017/Exp/Exp.tex
@@ -262,7 +262,7 @@ Iz snimljenih odziva vidljivo je da sustav upravljanja zadržava stabilnost uz u
 	\label{fig:rot_odzivi}
 \end{figure}
 
-Provedenim eksperimentima potvrđena je uspješnost projektiranja sustava upravljanja. Snimljeni odzivi potvrđuju ispravnost i stabilnost ponašanja letjelice što omogućuje izvođenje prvih eksperimentalnih letova.
+\noindent Provedenim eksperimentima potvrđena je uspješnost projektiranja sustava upravljanja. Snimljeni odzivi potvrđuju ispravnost i stabilnost ponašanja letjelice.
 
 
 
