--- a/Rektor_2017/rektor_2017.tex
+++ b/Rektor_2017/rektor_2017.tex
@@ -259,7 +259,7 @@ Zagreb, \the\year
 \input{Software/Software}
 
 \newpage
-\section{Eksperimentalno testiranje}
+\section{Eksperimentalni rezultati}
 \input{Exp/Exp}
 
 
