Modify. MO comments.

--- a/Rektor_2017/CAD/CAD.tex
+++ b/Rektor_2017/CAD/CAD.tex
@@ -248,7 +248,7 @@ Koračni motor odabran je zato jer pruža mogućnost korištenja upravljanja poz
 
 \subsubsection{Kretanje po kraku letjelice}
 
-Kretanje mase po kraku je linijsko. Kako bi kretanje mase imalo minimalno trenje, odabran je klizni mehanizam prikazan Slikom \ref{fig:klizni_mehanizam}. Klizni mehanizam montiran je s doljnje strane kraka, a za aluminijsku kvadratnu cijev pričvršćen je s dva vijka. Klizni mehanizam se sastoji od vodilice i kolica. Na kolicima se nalazi klizni mehanizam koji se sastoji od sitnih kuglica koje omogućavaju klizno gibanje s malim trenjem. Na kolica kliznog mehanizma montirano je posebno konstruiran prihvat koračnog motora(slika \ref{fig:stepper_bracket}), kojim se koračni motor učvršćuje na klizni mehanizam.
+Kretanje mase po kraku je linijsko. Kako bi kretanje mase imalo minimalno trenje, odabran je klizni mehanizam prikazan Slikom \ref{fig:klizni_mehanizam}. Klizni mehanizam montiran je s doljnje strane kraka, a za aluminijsku kvadratnu cijev pričvršćen je s dva vijka. Klizni mehanizam se sastoji od vodilice i kolica. Na kolicima se nalazi klizni mehanizam koji se sastoji od sitnih kuglica koje omogućavaju klizno gibanje s malim trenjem. Na kolica kliznog mehanizma montirano je posebno konstruiran prihvat koračnog motora(Slika \ref{fig:stepper_bracket}), kojim se koračni motor učvršćuje na klizni mehanizam.
 
 
 \begin{figure}[H]
@@ -268,7 +268,7 @@ Kretanje mase po kraku je linijsko. Kako bi kretanje mase imalo minimalno trenje
 \end{figure}
 
 Rotacija koračnih motora se prenosi na linijsko gibanje po kraku pomoću zupčastog prijenosa. Zupčasti prijenos je dizajniran tako da jedan puni okret koračnog motora pokriva cijeli potrebni raspon linijskog gibanje na kraku. 
-Zupčasta letva(slika \ref{fig:gear_rack}) je zaljepljena na bočnu stranu aluminijske kvadratne cijevi pomoću dvokomponentnog ljepila. Zupčanik(slika \ref{fig:gear_gear}) se montira na adapter osovine koračnog motora pomoću 4 vijka. 
+Zupčasta letva(Slika \ref{fig:gear_rack}) je zaljepljena na bočnu stranu aluminijske kvadratne cijevi pomoću dvokomponentnog ljepila. Zupčanik(Slika \ref{fig:gear_gear}) se montira na adapter osovine koračnog motora pomoću 4 vijka. 
 
 
 
@@ -364,7 +364,7 @@ Iznad upravljačkog sklopovlja, nalazi se sloj za daljnja proširenja. Daljnja p
 \end{figure}
 
 \subsection{Prikaz rezalizacije mehaničke konstrukcije}
-Nakon izrade svih svih dijelova, uslijedila je montaža. Modificirana letjelica \textit{ArduCopter} postavljena je na stalak, s omogućenim jednim stupnjem slobode. Konačni izgled letjelice postavljene na stalak prikazan je Slikom \ref{fig:arm_assembly_Real}. Na Slici \ref{fig:drone_final_2} prikazana je letjelica s odmakom iznosa $0.2 rad$ iz središnjeg položaja. Realizacija mehanizma pokretne mase prikazana je Slikom \ref{fig:drone_final_3}.
+Nakon izrade svih svih dijelova, uslijedila je montaža. Modificirana letjelica \textit{ArduCopter} postavljena je na stalak, s omogućenim jednim stupnjem slobode. Konačni izgled letjelice postavljene na stalak prikazan je Slikom \ref{fig:arm_assembly_Real}. Na Slici \ref{fig:drone_final_2} prikazana je letjelica s odmakom iznosa 0.2 \textit{rad} iz središnjeg položaja. Realizacija mehanizma pokretne mase prikazana je Slikom \ref{fig:drone_final_3}.
 
 \begin{figure}[H]
 	\centering
@@ -377,7 +377,7 @@ Nakon izrade svih svih dijelova, uslijedila je montaža. Modificirana letjelica 
 \begin{figure}[H]
 	\centering
 	\includegraphics[width=0.9\textwidth]{figures/letjelica2.png}
-	\caption{Prikaz laboratorijskog modela letjelice s pomičnom masom - odmak $0.2 rad$}
+	\caption{Prikaz laboratorijskog modela letjelice s pomičnom masom - odmak 0.2 \textit{rad}}
 	\label{fig:drone_final_2}
 \end{figure}
 \begin{figure}[H]
