Modified Uvod and Koncept by M.O. suggestions
Also cited two sources in software part. Remaining for fix:
Matematicki model,
Identifikacija parametara sustava,
Upravljacka struktura

--- a/Rektor_2017/Koncept/Koncept.tex
+++ b/Rektor_2017/Koncept/Koncept.tex
@@ -162,11 +162,6 @@
 \usepackage{lscape}
 \begin{document}
 
-
-Kao što je spomenuto u uvodu ovog rada, cilj je dizajnirati i razviti laboratorijski model letjelice u svrhu testiranja novog koncepta upravljanja zasnovanog na promjeni centra mase letjelice. 
-
-\medskip
-
 Promjena centra mase letjelice postiže se promjenom pozicije pomičnih masa smještenih na krakove letjelice. Ta promjena uzrokuje nastanak momenata kuteva  valjanja (\textit{roll}) i poniranja (\textit{pitch}), što zauzvrat služi za kontrolu pozicije letjelice. Grafički prikaz uzroka i posljedice ovog koncepta upravljanja prikazan je Slikom \ref{fig:kontrol}. Kako bi upravljanje kutevima valjanja i poniranja bilo raspregnuto, multirotorska letjelica mora biti konstruirana u standardnoj \textit{plus konfiguraciji} \cite{haus1}.
 
 \bigskip
@@ -179,7 +174,7 @@ Promjena centra mase letjelice postiže se promjenom pozicije pomičnih masa smj
 \end{figure}
 
 
-Bitno je naglasiti kako se za upravljanje visine letjelice te kuta njezinog zakreta i dalje koristi klasična metoda upravljanja, ona zasnovana na promjeni brzine vrtnje propelera. Dinamika letjelice po visini i zakretanju je sporije od dinamike valjanja i poniranja te se očekuje kako će benzinski motori moći upravljati s tim stupnjevima slobode. U nastavku ovog rada glavni će fokus biti na novom konceptu upravljanja kutevima poniranja i valjanja multirotorske letjelice. 
+Bitno je naglasiti kako se za upravljanje visine letjelice te kuta njezinog zakreta i dalje koristi klasična metoda upravljanja, ona zasnovana na promjeni brzine vrtnje propelera. Dinamika letjelice po visini i zakretanju je sporija od dinamike valjanja i poniranja te se očekuje kako će benzinski motori moći upravljati s tim stupnjevima slobode. U nastavku ovog rada glavni će fokus biti na novom konceptu upravljanja kutevima poniranja i valjanja multirotorske letjelice. 
 
 
 \end{document}
