--- a/Rektor_2017/Software/Software.tex
+++ b/Rektor_2017/Software/Software.tex
@@ -203,7 +203,7 @@ cjeline, a sa ostalim modulima komuniciraju korištenjem redova poruka (eng. \te
 \end{center}
 
 \subsection{Programska podrška za Pixhawk kontroler leta}
-Pixhawk kontroler leta je komercijalno dostupan sklop koji u paketu dolazi s vlastitim programskim kodom. Programski kod Pixhawk kontrolera (\textit{PX4 firmware}) prilagođen je sklopovskoj platformi na kojoj se nalazi i omogućuje upravljanje velikim brojem letjelica različitih konfiguracija. Iako podržava velik broj konfiguracija letjelica, PX4 ne pruža gotovo rješenje za specifičan način upravljanja prikazan u ovom radu. PX4 je programsko rješenje otvorenog koda i dozvoljeno je raditi modifikacije programskog koda prema BSD licenci. PX4 programska platforma je modularna te nije potrebno razvijati cjelokupnu programsku potporu već samo module specifične za upravljanje zasnovano na pomičnim masama. Kod razvoja programske podrške, osim modula PX4 platforme, korišteni su i moduli za kontrolu položaja letjelice razvijeni u Laboratoriju za robotiku i inteligentne sustave upravljanja (LARICS). Dodatno je razvijen programski modul za serijsku komunikaciju kojim se ostvaruje sučelje prema upravljačkoj jedinici za kontrolu koračnih motora. Očitane vrijednosti izlaza upravljačkih algoritama rotacije letjelice oko osi valjanja i poniranja i odgovarajućih izlaza upravljačke petlje brzina rotacije oko istih osi prevode se u naredbe zakreta koračnog motora te se pakiraju u odgovarajuću strukturu podataka. Strukture podataka šalju se serijskom vezom prema upravljačkoj pločici koračnih motora. Ilustracija interakcije programskih modula sustava upravljanja prikazana je na Slici \ref{fig:shema_modula}.
+Pixhawk kontroler leta je komercijalno dostupan sklop koji u paketu dolazi s vlastitim programskim kodom. Programski kod Pixhawk kontrolera (\textit{PX4 firmware}) prilagođen je sklopovskoj platformi na kojoj se nalazi i omogućuje upravljanje velikim brojem letjelica različitih konfiguracija. Iako podržava velik broj konfiguracija letjelica, PX4 ne pruža gotovo rješenje za specifičan način upravljanja prikazan u ovom radu. PX4 je programsko rješenje otvorenog koda i dozvoljeno je raditi modifikacije programskog koda prema BSD licenci \cite{px4_docu}. PX4 programska platforma je modularna te nije potrebno razvijati cjelokupnu programsku potporu već samo module specifične za upravljanje zasnovano na pomičnim masama. Kod razvoja programske podrške, osim modula PX4 platforme, korišteni su i moduli za kontrolu položaja letjelice razvijeni u Laboratoriju za robotiku i inteligentne sustave upravljanja (LARICS). Dodatno je razvijen programski modul za serijsku komunikaciju kojim se ostvaruje sučelje prema upravljačkoj jedinici za kontrolu koračnih motora \cite{cpp}. Očitane vrijednosti izlaza upravljačkih algoritama rotacije letjelice oko osi valjanja i poniranja i odgovarajućih izlaza upravljačke petlje brzina rotacije oko istih osi prevode se u naredbe zakreta koračnog motora te se pakiraju u odgovarajuću strukturu podataka. Strukture podataka šalju se serijskom vezom prema upravljačkoj pločici koračnih motora. Ilustracija interakcije programskih modula sustava upravljanja prikazana je na Slici \ref{fig:shema_modula}.
 \begin{center}
 	\centering
 	\includegraphics[width=1\textwidth]{{shema_modula}.PNG}
