--- a/Rektor_2017/Summary/Summary.tex
+++ b/Rektor_2017/Summary/Summary.tex
@@ -166,7 +166,7 @@
 
 \noindent Title: Design and development of a small multirotor aerial vehicle with moving mass control	\newline
 
-In this paper the design and creation of a laboratory model quadrotor with moving mass control is presented. Novel concept of quadrotor control was introduced in MORUS project which presents the design of unmanned system for maritime security and environmental monitoring. Classic quadrotor with electric motors was replaced with new quadrotor powered by internal combustion engines using the shift in the center of gravity to control the attitude of the quadrotor. For the purposes of testing and verifying the new concept of attitude control, small scale laboratory model was build. This paper presents modifications made to the existing ArduCopter quadrotor comprising of mechanical modifications, design and fabrication of electronic hardware and software design. Modified quadcopter was described with identified mathematical model as a basis for control system design. Modified quadrotor was tested in laboratory environment.
+In this paper we present design and development of a small multirotor aerial vehicle (quadrotor) with moving mass control concept. This concept is introduced in the MORUS project, whose goal is to develop an unmanned robotic system for maritime security and environmental monitoring. In the MORUS project a new quadrotor concept, powered by internal combustion engines and stabilized through the shift of the center of gravity, is proposed. To experimentally verify the new concept and alleviate testing of new algorithms, a small scale laboratory model of the MORUS quadrotor concept is built.The laboratory model is based on an existing ArduCopter quadrotor, for which we present mechanical modifications, hardware and software design, which are required to achieve the new concept. We present a mathematical model of the developed vehicle and identification results of important system parameters. Finally, the experimental results are presented, which demonstrate validity of the new quadrotor platform.
 
 \medskip
 
